# stm32-SPI-SD-card

./: .gitignore  README.md
FatFS/Blinky-STM32G431/: CMakeLists.txt  build.sh  main.c
FatFS/Blinky-STM32G431/.cache/clangd/index/: cmsis_compiler.h.E76CF6096A9E6756.idx  cmsis_gcc.h.F3135A726C070CD3.idx  cmsis_version.h.D4ADA656CD545934.idx  core_cm4.h.20344A565A8AFF46.idx  main.c.B9B024D11A4A4D4A.idx  mpu_armv7.h.695786A09E7CE6FE.idx  stm32g431xx.h.B9FF9C5149ED0E2C.idx  stm32g4xx.h.A7A6EC779BBDEE79.idx  system_stm32g4xx.c.98056397B838F8FF.idx  system_stm32g4xx.h.DC65F774160595EC.idx
FatFS/spi-Loopbacktest-STM32G431/: CMakeLists.txt  main.cpp
FatFS/spi-Loopbacktest-STM32G431/.cache/clangd/index/: cmsis_gcc.h.91775C7B85878B9A.idx  cmsis_version.h.BDEBF7608189E3E7.idx  core_cm4.h.C282BEAF0CCCEA88.idx  main.c.C7B22E9C74EB6FB6.idx  main.cpp.EFC92DAC796587E1.idx  mpu_armv7.h.B120E04D7B745F07.idx  system_stm32g4xx.c.3D5A42771F026EC6.idx
FatFS/spi-sdcardwrite/: CMakeLists.txt  main.cpp
FatFS/spi-sdcardwrite/.cache/clangd/index/: GPIO_HAL.hpp.F8190780D123331D.idx  cmsis_compiler.h.7343C98FB1FC9B4E.idx  cmsis_compiler.h.B1EF7F632405FA9C.idx  cmsis_gcc.h.8971399F18AE5F20.idx  cmsis_version.h.79BB776E888B89CF.idx  core_cm4.h.EFF612F149B1EDFF.idx  main.cpp.DEBE1224BE80923D.idx  main.cpp.E435281D1DF00292.idx  main.cpp.EFC92DAC796587E1.idx  mpu_armv7.h.21AF2A2DA59EA9C2.idx  sdcarddriver.hpp.A71B2F94ADE75CDA.idx  spidriver.hpp.C50784BD01F08BE3.idx  stm32g431xx.h.2405BA62EAAC746C.idx  stm32g431xx.h.B5B03BF633A3DF61.idx  stm32g4xx.h.809A12E2D8FE302A.idx  stm32g4xx.h.AA4627906F31035A.idx  system_stm32g4xx.c.2D04A52BE05621F1.idx  system_stm32g4xx.h.ABEB8AC4F962638C.idx  system_stm32g4xx.h.F5E5B6E2F4D4A418.idx
FatFS/spi-sdcardwrite/src/: GPIO_HAL.hpp  main.cpp  sdcarddriver.hpp  spidriver.hpp
LaTeX/: Notes.txt  main.tex
LaTeX/_minted/: 350870C359A29C6ECF686D91A5D63AE9.highlight.minted  _FAD58DE7366495DB4650CFEFAC2FCD61.index.minted
PCB/: .README.md.swp  README.md  easyedacmd
PCB/stm-sdcard/: fp-lib-table  spi.kicad_sch  stm-sdcard.csv  stm-sdcard.kicad_pcb  stm-sdcard.kicad_pro  stm-sdcard.kicad_sch  sym-lib-table  ~stm-sdcard.kicad_pro.lck
PCB/stm-sdcard/Gerber/: stm-sdcard-B_Cu.gbr  stm-sdcard-B_Mask.gbr  stm-sdcard-B_Paste.gbr  stm-sdcard-B_Silkscreen.gbr  stm-sdcard-Edge_Cuts.gbr  stm-sdcard-F_Cu.gbr  stm-sdcard-F_Mask.gbr  stm-sdcard-F_Paste.gbr  stm-sdcard-F_Silkscreen.gbr  stm-sdcard-job.gbrjob  stm-sdcard.drl
PCB/stm-sdcard/img/: BHTlogo.kicad_mod
PCB/stm-sdcard/libs/: LDO-TI.kicad_sym  hanxia_sd_slot.kicad_sym  usb-typec.kicad_sym
PCB/stm-sdcard/libs/LDO-TI.3dshapes/: SOT-223-4P_L6.5-W3.5-H1.6-LS7.0-P2.30.wrl
PCB/stm-sdcard/libs/LDO-TI.pretty/: SOT-223_L6.7-W3.5-P2.30-BR.kicad_mod
PCB/stm-sdcard/libs/hanxia_sd_slot.3dshapes/: TF-SMD_HX-TF-CARD-H1.8-SY.wrl
PCB/stm-sdcard/libs/hanxia_sd_slot.pretty/: TF-SMD_HX-TF-CARD-H1.8-SY.kicad_mod
PCB/stm-sdcard/libs/usb-typec.3dshapes/: USB-C-SMD_TYPE-C16PIN.wrl
PCB/stm-sdcard/libs/usb-typec.pretty/: USB-C-SMD_TYPE-C16PIN_C668624.kicad_mod
stmref/: README.md
